<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardUseCompatPadding="false"
            app:cardElevation="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Our Team"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="24dp"
                    android:layout_height="4dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape"

                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/mam" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sidra_shahid"
                        android:paddingTop="8dp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/supervisor"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:textSize="12sp"
                      />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"

                        android:scaleType="centerCrop"
                        android:src="@drawable/umair" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/umair_shafique"
                        android:paddingTop="8dp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/developer"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:textSize="12sp"
                        />

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center"

                            android:scaleType="centerCrop"
                            android:src="@drawable/nadeem" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/muhammad_nadeem"
                            android:paddingTop="8dp"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developer"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textSize="12sp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center"

                            android:scaleType="centerCrop"
                            android:src="@drawable/sumbal" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sunbal_nawaz"
                            android:paddingTop="8dp"
                            android:fontFamily="sans-serif"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="12sp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/developer"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textSize="12sp"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardUseCompatPadding="false"
        app:cardElevation="8dp"
        app:cardCornerRadius="4dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="About Us"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="24dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorum"
        android:layout_gravity="center_horizontal|center"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:id="@+id/aboutUsText"

        android:layout_marginTop="8dp"/>


</LinearLayout>



    </com.google.android.material.card.MaterialCardView>



</LinearLayout>



</androidx.core.widget.NestedScrollView>