<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:visibility="visible"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/outgoingCallContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient2"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_notification"
        android:drawableLeft="@drawable/ic_notification"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white_five"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/outgoing_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/circleTextViewOutGoingCall"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle_colored"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.26"
        android:text="MN" />
    <TextView
        android:id="@+id/nameOutgoingCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="@+id/outgoing_status1"
        app:layout_constraintEnd_toEndOf="@+id/circleTextViewOutGoingCall"
        app:layout_constraintStart_toStartOf="@+id/circleTextViewOutGoingCall"
        app:layout_constraintTop_toBottomOf="@+id/circleTextViewOutGoingCall"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/outgoing_status1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ringing"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nameOutgoingCall"
        android:textColor="@color/white_two"
        app:layout_constraintStart_toStartOf="@+id/nameOutgoingCall"
        app:layout_constraintTop_toBottomOf="@+id/nameOutgoingCall"
        app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cancelOutGoing"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outgoing_status1"
        app:layout_constraintVertical_bias="0.70"
        app:lottie_autoPlay="true"
        app:lottie_colorFilter="#FF0000"
        app:lottie_fileName="incomming_call.json"
        app:lottie_loop="true">

    </com.airbnb.lottie.LottieAnimationView>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_hang_call"
        app:layout_constraintBottom_toBottomOf="@+id/cancelOutGoing"
        app:layout_constraintEnd_toEndOf="@+id/cancelOutGoing"
        app:layout_constraintStart_toStartOf="@+id/cancelOutGoing"
        app:layout_constraintTop_toTopOf="@+id/cancelOutGoing" />



</androidx.constraintlayout.widget.ConstraintLayout>