<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_layout"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_gradient2"
    tools:context=".SignUpActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagePerson"
            android:layout_width="160dp"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_user" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cam_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            app:backgroundTint="@color/colorAccent3"
            android:layout_margin="8dp"
            android:src="@drawable/camera"
            android:tint="@color/white"
            app:fabSize="mini" />
    </FrameLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:hintAnimationEnabled="true"
                android:textColorHint="@color/white_five"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_profile"
                    android:drawablePadding="8dp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:drawableStart="@drawable/ic_profile" />

            </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColorHint="@color/white_five"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_last_name"
                        android:layout_width="match_parent"
                        android:drawableLeft="@drawable/ic_profile"
                        android:drawablePadding="8dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="textCapWords"
                        android:drawableStart="@drawable/ic_profile" />

                </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="@color/white_five"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_bumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_telephone"
                    android:drawablePadding="8dp"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_telephone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_btn"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:backgroundTint="@color/colorAccent3"
                android:shadowRadius="5"
                android:text="@string/signup" />
        </LinearLayout>

</LinearLayout>
</FrameLayout>